--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                     <nav class="menu-display">
                         <ul style="display: flex;">
                             <li>
-                                <a href="#" class="menu">About</a>
+                                <a href="about.html" class="menu">About</a>
                             </li>
                             <li>
                                 <a href="#" class="menu">Catalog</a>
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
                 <div class="header-row justify-content-end pb-3 social-hamburger">
@@ -252,8 +252,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3">
-                        <div class="title-page-about">
-                            <h3>About</h3>
+                        <img src="img/doodle-sabi.png" alt="" srcset="" class="doodle doodle-about">
+                        <div class="title-page-about title-section">
+                            <h1>ABOUT</h1>
                         </div>
                     </div>
                     <div class="col-lg-8">
@@ -274,29 +275,27 @@
             </div>
         </section>
 
-        <section class="section-services" style="border-bottom: 1px solid #000;">
+        <section class="section-services">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="title-our-service">
-                            <h3>Our Services</h3>
+                        <div class="title-our-service title-section">
+                            <h1>OUR SERVICES</h1>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="list-services">
                             <ul>
-                                <li>Comic Illustration/Social Media Content
-                                </li>
-                                <li>Animation</li>
+                                <li><span>Comic Illustration/Social Media Content</span></li>
+                                <li><span>Animation</span></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="list-services">
                             <ul>
-                                <li>Social Campaign Media Based Comic
-                                </li>
-                                <li>Social Media Account Management</li>
+                                <li><span>Social Campaign Media Based Comic</span></li>
+                                <li><span>Social Media Account Management</span></li>
                             </ul>
                         </div>
                     </div>
@@ -308,25 +307,51 @@
             </div>
         </section>
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
+                </div>
+            </div>
+        </div>
 
-        <section class="py-5 section-timeline" style="border-bottom: 1px solid #000;">
+
+        <section class="py-5 section-our-team">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-3">
+                        <img src="img/doodle-cimeng.png" alt="" srcset="" class="doodle doodle-timeline">
+                        <div class="title-section">
+                            <h1>TIMELINE</h1>
+                        </div>
+                        <div class="content-desc">
+                            <p>KOSMIK lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam</p>
+                        </div>
+                        
+                    </div>
+                    <div class="col-lg-9">
                         <div class="timeline">
-                            <img src="img/timeline.png" alt="" srcset="">
+                            <img src="img/timeline.jpg" alt="" srcset="">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
+                </div>
+            </div>
+        </div>
+
         <section class="py-5 section-our-team">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="title-our-team">
-                            <h3>Our Team</h3>
+                        <div class="title-our-team title-section">
+                            <h1>Our Team</h1>
                         </div>
                     </div>
                 </div>
@@ -341,85 +366,53 @@
                         <ul
                             class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-light">
                             <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt="" class="team-img">
+                                <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt="" class="team-img-hover">
+                                <div class="desc-team">
+                                    <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
+                                    <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                </div>                           
                             </li>
                             <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt="" class="team-img">
+                                <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt="" class="team-img-hover">
+                                <div class="desc-team">
+                                    <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
+                                    <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                </div>                           
                             </li>
                             <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt="" class="team-img">
+                                <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt="" class="team-img-hover">
+                                <div class="desc-team">
+                                    <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
+                                    <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                </div>                           
                             </li>
                             <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt="" class="team-img">
+                                <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt="" class="team-img-hover">
+                                <div class="desc-team">
+                                    <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
+                                    <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                </div>                           
                             </li>
                             <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt="" class="team-img">
+                                <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt="" class="team-img-hover">
+                                <div class="desc-team">
+                                    <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
+                                    <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                </div>                           
                             </li>
                             <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
-                            </li>
-                            <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
-                            </li>
-                            <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
-                            </li>
-                            <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
-                            </li>
-                            <li class="uk-transition-toggle" tabindex="0">
-                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt=""
-                                    class="img-before-hover">
-                                <div class="uk-position-center uk-panel">
-                                    <h1 class="uk-transition-slide-bottom-small"> <img src="img/team-kosmik-9-1.png"
-                                            width="400" height="auto" alt="" class="img-after-hover"></h1>
-                                </div>
-                            </li>
+                                <img src="img/team-kosmik-9.png" width="400" height="auto" alt="" class="team-img">
+                                <img src="img/team-kosmik-9-1.png" width="400" height="auto" alt="" class="team-img-hover">
+                                <div class="desc-team">
+                                    <h3 style="margin-bottom: 0; font-weight: bold">NAME</h3>
+                                    <p style="margin: 0; font-weight: bold; color: #4d4d4d">TITLE</p>
+                                </div>                           
+                            </li>  
                         </ul>
 
                         <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
@@ -438,7 +431,7 @@
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
 
                         <ul class="list list-unstyled mb-0">
-                            <li class="mb-0"><a href="#">About</a></li>
+                            <li class="mb-0"><a href="about.html">About</a></li>
                             <li class="mb-0"><a href="#">Catalog</a></li>
                             <li class="mb-0"><a href="#">News</a></li>
                             <li class="mb-0"><a href="#">Contact</a></li>
