--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <nav class="menu-display">
                         <ul style="display: flex;">
                             <li>
-                                <a href="#" class="menu">About</a>
+                                <a href="about.html" class="menu">About</a>
                             </li>
                             <li>
                                 <a href="#" class="menu">Catalog</a>
@@ -208,7 +208,7 @@
                                                 </form>
                                             </li>
                                             <li>
-                                                <a href="#">About</a>
+                                                <a href="about.html">About</a>
                                             </li>
                                             <li>
                                                 <a href="#">Catalog</a>
@@ -508,7 +508,7 @@
         <section class="py-5 contact-home">
             <div class="container-fluid">
                 <div class="row">
-                    <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle">
+                    <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle doodle-contact">
                     <img src="img/banner-kontak.jpg" class="img-fluid img-contact" alt="...">
                     <div class="col-lg-3">
                         <div class="title-contact">
@@ -542,7 +542,7 @@
                     <div class="col-md-6 col-lg-2 col-xs-6 mb-5 mb-lg-0 list-logo-footer">
 
                         <ul class="list list-unstyled mb-0">
-                            <li class="mb-0"><a href="#">About</a></li>
+                            <li class="mb-0"><a href="about.html">About</a></li>
                             <li class="mb-0"><a href="#">Catalog</a></li>
                             <li class="mb-0"><a href="#">News</a></li>
                             <li class="mb-0"><a href="#">Contact</a></li>
