--- a/about.html
+++ b/about.html
@@ -414,8 +414,7 @@
                                 </div>                           
                             </li>  
                         </ul>
-
-                        <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+                        <!-- <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul> -->
 
                     </div>
                 </div>
