--- a/index.html
+++ b/index.html
@@ -577,13 +577,13 @@
         </footer>
     </div>
 
-
     <!-- Vendor -->
     <script data-cfasync="false" src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery.appear/jquery.appear.min.js"></script>
     <script src="vendor/jquery.easing/jquery.easing.min.js"></script>
     <script src="vendor/jquery.cookie/jquery.cookie.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/jquery.validation/jquery.validate.min.js"></script>
     <script src="vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script>
