Fix modal popups

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Kosmik</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <meta name="keywords" content="WebSite Template" />
     <meta name="description" content="Porto - Multipurpose Website Template">
     <meta name="author" content="okler.net">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.png">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -208,7 +209,7 @@
                                                 </form>
                                             </li>
                                             <li>
-                                                <a href="about.html">About</a>
+                                                <a href="#">About</a>
                                             </li>
                                             <li>
                                                 <a href="#">Catalog</a>
@@ -224,7 +225,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
                 <div class="header-row justify-content-end pb-3 social-hamburger">
