--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Kosmik</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <meta name="keywords" content="WebSite Template" />
     <meta name="description" content="Porto - Multipurpose Website Template">
@@ -24,9 +23,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 
     <!-- Web Fonts  -->
-    <link id="googleFonts"
-        href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&amp;display=swap"
-        rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
 
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -56,9 +55,6 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Style css -->
-    <link rel="stylesheet" href="css/style.css">
-
     <!-- Responsive css -->
     <link rel="stylesheet" href="css/responsive.css">
 
@@ -72,6 +68,9 @@
 
     <!-- Head Libs -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
+
+    <!-- Style css -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -332,23 +331,23 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 timeline-img-padding">
 
                         <div class="timeline" id="timeline">
                             <img src="img/timeline.jpg" alt="" srcset="">
                         </div>
 
                     </div>
-                    <div class="col-lg-1">
+                    <div class="col-lg-1 scroll-button-padding">
 
                         <div class="button-scroll-wrapper">
-                            <div class="button-wrap">                                
-                            <button class="btn" onclick="scrollUp()">
-                                <span class="glyphicon glyphicon-triangle-top"></span>
-                            </button>
-                            <button class="btn" onclick="scrollDown()">
-                                <span class="glyphicon glyphicon-triangle-bottom"></span>
-                            </button>
+                            <div class="button-wrap">
+                                <button class="btn" onclick="scrollUp()">
+                                    <span class="glyphicon glyphicon-triangle-top"></span>
+                                </button>
+                                <button class="btn" onclick="scrollDown()">
+                                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                                </button>
                             </div>
                         </div>
 
@@ -454,15 +453,15 @@
                         <!-- This modal will be repeating correlate with summary of slider items above -->
                         <div class="modal fade" id="teamModal" tabindex="-1" role="dialog"
                             aria-labelledby="exampleModalLabel" aria-hidden="true" style="z-index: 9999999 !important;">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
+
                                     </div>
                                     <div class="modal-body">
-
                                         <div class="container-fluid">
                                             <div class="row">
                                                 <div class="col-lg-6">
@@ -543,7 +542,6 @@
     </div>
 
     <!-- Vendor -->
-    <script data-cfasync="false" src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery.appear/jquery.appear.min.js"></script>
     <script src="vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -574,12 +572,6 @@
 
     <!-- Theme Initialization Files -->
     <script src="js/theme.init.js"></script>
-
-    <script defer
-        src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194"
-        integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw=="
-        data-cf-beacon='{"rayId":"6ecaf4b99cac4727","version":"2021.12.0","r":1,"token":"03fa3b9eb60b49789931c4694c153f9b","si":100}'
-        crossorigin="anonymous"></script>
 
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
