--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                                 </form>
                                             </li>
                                             <li>
-                                                <a href="#">About</a>
+                                                <a href="about.html">About</a>
                                             </li>
                                             <li>
                                                 <a href="#">Catalog</a>
