Add animatin fade in

--- a/about.html
+++ b/about.html
@@ -252,7 +252,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3">
-                        <img src="img/doodle-sabi.png" alt="" srcset="" class="doodle doodle-about">
+                        <img src="img/doodle-sabi.png" alt="" srcset="" class="doodle doodle-about reveal fade-left">
                         <div class="title-page-about title-section">
                             <h1>ABOUT</h1>
                         </div>
@@ -276,7 +276,7 @@
         </section>
 
         <section class="section-services">
-            <div class="container-fluid">
+            <div class="container-fluid reveal bottom">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="title-our-service title-section">
@@ -317,10 +317,10 @@
 
 
         <section class="py-5 section-timeline">
-            <div class="container-fluid">
+            <div class="container-fluid reveal fade-bottom">
                 <div class="row" style="max-height: 97vh">
                     <div class="col-lg-3">
-                        <img src="img/doodle-cimeng.png" alt="" srcset="" class="doodle doodle-timeline">
+                        <img src="img/doodle-cimeng.png" alt="" srcset="" class="doodle doodle-timeline reveal fade-left">
                         <div class="title-section">
                             <h1>TIMELINE</h1>
                         </div>
@@ -368,14 +368,14 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="title-our-team title-section">
+                        <div class="title-our-team title-section reveal fade-left">
                             <h1>Our Team</h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div uk-slider>
-                        <div class="arrow-slider-team">
+                        <div class="arrow-slider-team reveal fade-right">
                             <a href="#" uk-slider-item="previous"><span
                                     class="glyphicon glyphicon-triangle-left"></span></a>
                             <a href="#" uk-slider-item="next"><span
