--- a/index.html
+++ b/index.html
@@ -270,10 +270,11 @@
             </div>
 
             <section class="featured" id="featured">
+                
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-12">
-                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1">
+                        <div class="col-lg-12 reveal fade-left"> 
+                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1 reveal fade-left">                          
                             <h5 class="tag-featured">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda itaque doloremque
                                 aut officiis magni, autem architecto libero mollitia. Necessitatibus velit doloribus
@@ -281,9 +282,9 @@
                             </h5>
                         </div>
                         <div class="col-lg-2">
-                            <h3 class="title-featured">Featured titles</h3>
+                            <h3 class="title-featured reveal fade-left">Featured titles</h3>
                         </div>
-                        <div class="col-lg-10 col-xs-12 slider-featured">
+                        <div class="col-lg-10 col-xs-12 slider-featured reveal fade-right">
                             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
@@ -338,8 +339,8 @@
             <section class="py-5 newest">
                 <div class="container-fluid">
                     <div class="row">
-                        <h3 class="newest-titles">Newest Titles</h3>
-                        <div class="col-lg-6 col-xs-12">
+                        <h3 class="newest-titles reveal fade-bottom">Newest Titles</h3>
+                        <div class="col-lg-6 col-xs-12 reveal fade-left">
                             <div class="container-newest">
                                 <img src="img/newest-1.jpg" alt="Avatar" class="image-newest">
                                 <div class="overlay-newest">
@@ -348,7 +349,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-xs-12">
+                        <div class="col-lg-6 col-xs-12 reveal fade-right">
                             <div class="container-newest">
                                 <img src="img/newest-2.jpg" alt="Avatar" class="image-newest">
                                 <div class="overlay-newest">
@@ -374,15 +375,15 @@
             </div>
 
             <section class="py-5 about-home">
-                <div class="container-fluid">
+                <div class="container-fluid reveal">
                     <div class="row">
                         <div class="col-lg-2">
                             <div class="title-about">
-                                <h3>About</h3>
+                                <h3 class="reveal fade-left">About</h3>
                             </div>
                         </div>
                         <div class="col-lg-10">
-                            <div class="content-about">
+                            <div class="content-about reveal fade-right">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, iure doloribus
                                     possimus
                                     odit recusandae alias sequi corrupti error aperiam consequuntur asperiores sed
@@ -419,7 +420,7 @@
         </div>
 
         <section class="py-5 news-home">
-            <div class="container-fluid">
+            <div class="container-fluid reveal fade-bottom">
                 <div class="row">
                     <div class="col-lg-3 col-xs-12">
                         <div class="title-new-funfact">
@@ -515,9 +516,9 @@
         </div>
 
         <section class="py-5 contact-home">
-            <div class="container-fluid">
+            <div class="container-fluid reveal">
                 <div class="row">
-                    <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle doodle-contact">
+                    <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle doodle-contact reveal fade-right">
                     <img src="img/banner-kontak.jpg" class="img-fluid img-contact" alt="...">
                     <div class="col-lg-3">
                         <div class="title-contact">
