--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <!-- Web Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -55,9 +57,10 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Responsive css -->
+    <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
 
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- UIkit CSS -->
@@ -69,7 +72,7 @@
     <!-- Head Libs -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
 
-    <!-- Style css -->
+    <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -102,7 +105,7 @@
         </div>
         <header id="header" class="header-effect-shrink mobile"
             data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyChangeLogo': true, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 70}"
-            style="height: 101px;">
+            style="height: 101px; top: 0 !important;">
             <div class="header-body border-top-0">
                 <div class="header-container container-fluid px-lg-4" style="height: 100px;">
                     <div class="header-row">
@@ -118,37 +121,24 @@
                         </div>
                         <div class="header-column justify-content-end">
                             <div class="header-row">
-                                <div class="header-nav header-nav-links order-2 order-lg-1">
-                                    <div
-                                        class="header-nav-main header-nav-main-square header-nav-main-effect-2 header-nav-main-sub-effect-1">
-                                        <nav class="collapse">
-                                            <ul class="nav nav-pills" id="mainNav">
-                                                <li>
-                                                    <a href="about.html">About</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Catalog</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">News</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Contact</a>
-                                                </li>
-                                            </ul>
-                                        </nav>
-                                    </div>
-                                    <button class="btn header-btn-collapse-nav" data-bs-toggle="collapse"
-                                        data-bs-target=".header-nav-main nav">
-                                        <i class="fas fa-bars"></i>
-                                    </button>
-                                </div>
-
+                                <button class="hamburguer-btn hamburguer-btn-sticky-dark">
+                                    <span class="hamburguer">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                    <span class="close">
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </button>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+
         </header>
         <header class="header-display desktop">
             <div class="header-row flex-row justify-content-center py-3">
@@ -180,12 +170,12 @@
                 </div>
             </div>
         </header>
-        <header id="header" class="side-header side-header-lg side-header-hide d-flex desktop">
+        <header id="header" class="side-header side-header-lg side-header-hide d-flex">
             <div class="header-body">
                 <div class="header-container container d-flex h-100">
                     <div class="header-column flex-column justify-content-center h-100">
                         <div class="header-row flex-row justify-content-center py-5">
-                            <div class="header-logo">
+                            <div class="header-logo desktop">
                                 <a href="index.html">
                                     <img alt="Porto" width="100" height="48" src="img/logo-kosmik.png"
                                         class="logo-menu-side">
@@ -242,8 +232,7 @@
             </div>
         </header>
 
-
-        <div role="main" class="main">
+        <main id="main" class="main">
             <div class="slider-container rev_slider_wrapper">
                 <div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider
                     data-plugin-options="{'sliderLayout': 'fullscreen', 'delay': 3000, 'gridwidth': 1170, 'gridheight': 700, 'disableProgressBar': 'on', 'responsiveLevels': [4096,1200,992,500], 'navigation' : {'arrows': { 'enable': false, 'style': 'arrows-style-1 arrows-primary' }, 'bullets': {'enable': false, 'style': 'bullets-style-1', 'h_align': 'center', 'v_align': 'bottom', 'space': 7, 'v_offset': 70, 'h_offset': 0}}}">
@@ -270,11 +259,10 @@
             </div>
 
             <section class="featured" id="featured">
-                
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-12 reveal fade-left"> 
-                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1 reveal fade-left">                          
+                        <div class="col-lg-12 reveal fade-left">
+                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1 reveal fade-left">
                             <h5 class="tag-featured">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda itaque doloremque
                                 aut officiis magni, autem architecto libero mollitia. Necessitatibus velit doloribus
@@ -417,67 +405,69 @@
                 </div>
             </div>
 
-        </div>
 
-        <section class="py-5 news-home">
-            <div class="container-fluid reveal fade-bottom">
-                <div class="row">
-                    <div class="col-lg-3 col-xs-12">
-                        <div class="title-new-funfact">
-                            <h3>News</h3>
-                            <p style="text-transform: uppercase;">Funfact</p>
-                            <p style="font-size: 16px; font-weight: 300; color: #4d4d4d;">25 Jan 2022 by Lorem Ipsum</p>
-                            <h1>JUDUL ARTIKEL
-                                LOREM IPSUM
-                                DOLOR SIT AMET SUI</h1>
-                            <p style="font-size: 24px; font-weight: unset; margin-top: 35px; line-height: unset;">Lorem
-                                ipsum dolor sit
-                                amet,
-                                consectetuer adipiscing elit,
-                                sed diam nonummy nibh
-                                euismod tincidunt ut</p>
+
+            <section class="py-5 news-home">
+                <div class="container-fluid reveal fade-bottom">
+                    <div class="row">
+                        <div class="col-lg-3 col-xs-12">
+                            <div class="title-new-funfact">
+                                <h3>News</h3>
+                                <p style="text-transform: uppercase;">Funfact</p>
+                                <p style="font-size: 16px; font-weight: 300; color: #4d4d4d;">25 Jan 2022 by Lorem Ipsum
+                                </p>
+                                <h1>JUDUL ARTIKEL
+                                    LOREM IPSUM
+                                    DOLOR SIT AMET SUI</h1>
+                                <p style="font-size: 24px; font-weight: unset; margin-top: 35px; line-height: unset;">
+                                    Lorem
+                                    ipsum dolor sit
+                                    amet,
+                                    consectetuer adipiscing elit,
+                                    sed diam nonummy nibh
+                                    euismod tincidunt ut</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-9 col-xs-12">
-                        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+                        <div class="col-lg-9 col-xs-12">
+                            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
-                            <ul class="uk-slider-items uk-grid">
-                                <li class="uk-width-4-5">
-                                    <div class="uk-panel">
-                                        <img src="img/news-1.jpg" class="img-news-funfact" alt="">
-                                        <div class="uk-position-center uk-text-center">
-                                            <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
+                                <ul class="uk-slider-items uk-grid">
+                                    <li class="uk-width-4-5">
+                                        <div class="uk-panel">
+                                            <img src="img/news-1.jpg" class="img-news-funfact" alt="">
+                                            <div class="uk-position-center uk-text-center">
+                                                <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
                                             <p uk-slider-parallax="x: 200,-200">Lorem ipsum dolor sit amet.</p> -->
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
-                                <li class="uk-width-4-5">
-                                    <div class="uk-panel">
-                                        <img src="img/news-2.jpg" class="img-news-funfact" alt="">
-                                        <div class="uk-position-center uk-text-center">
-                                            <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
+                                    </li>
+                                    <li class="uk-width-4-5">
+                                        <div class="uk-panel">
+                                            <img src="img/news-2.jpg" class="img-news-funfact" alt="">
+                                            <div class="uk-position-center uk-text-center">
+                                                <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
                                             <p uk-slider-parallax="x: 200,-200">Lorem ipsum dolor sit amet.</p> -->
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
-                                <li class="uk-width-4-5">
-                                    <div class="uk-panel">
-                                        <img src="img/news-3.jpg" class="img-news-funfact" alt="">
-                                        <div class="uk-position-center uk-text-center">
-                                            <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
+                                    </li>
+                                    <li class="uk-width-4-5">
+                                        <div class="uk-panel">
+                                            <img src="img/news-3.jpg" class="img-news-funfact" alt="">
+                                            <div class="uk-position-center uk-text-center">
+                                                <!-- <h2 uk-slider-parallax="x: 100,-100">Heading</h2>
                                             <p uk-slider-parallax="x: 200,-200">Lorem ipsum dolor sit amet.</p> -->
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
-                            </ul>
+                                    </li>
+                                </ul>
 
-                            <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#"
-                                uk-slidenav-previous uk-slider-item="previous" class="arrow-slider-news"></a>
-                            <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#"
-                                uk-slidenav-next uk-slider-item="next"></a>
+                                <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#"
+                                    uk-slidenav-previous uk-slider-item="previous" class="arrow-slider-news"></a>
+                                <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#"
+                                    uk-slidenav-next uk-slider-item="next"></a>
 
-                        </div>
-                        <!-- <div class="owl-carousel owl-theme nav-inside nav-style-1 nav-light"
+                            </div>
+                            <!-- <div class="owl-carousel owl-theme nav-inside nav-style-1 nav-light"
                             data-plugin-options="{'items': 1, 'margin': 10, 'loop': false, 'nav': true, 'dots': false}">
                             <div>
                                 <div class="img-thumbnail border-0 p-0 d-block">
@@ -498,50 +488,53 @@
                             </div>
                         </div> -->
 
-                    </div>
-                    <div class="span9 btn-block">
-                        <button class="btn btn-large btn-block btn-primary" type="button">More News <span
-                                class="glyphicon glyphicon-play"></span></button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
-                </div>
-            </div>
-        </div>
-
-        <section class="py-5 contact-home">
-            <div class="container-fluid reveal">
-                <div class="row">
-                    <img src="img/doodle-kosmik-2.png" alt="" srcset="" class="doodle doodle-contact reveal fade-right">
-                    <img src="img/banner-kontak.jpg" class="img-fluid img-contact" alt="...">
-                    <div class="col-lg-3">
-                        <div class="title-contact">
-                            <h3>Contact</h3>
-                        </div>
-                    </div>
-                    <div class="col-lg-9 col-xs-12">
-                        <div class="information-contact">
-                            <h3>Kosmik Network</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos amet repudiandae voluptate
-                                alias laudantium beatae porro minus magnam perspiciatis cum.</p>
-                            <br>
-                            <p>email bussiness kosmik@gmail.com</p>
-                            <p>+62 8888 xxxx xxxx</p>
                         </div>
                         <div class="span9 btn-block">
-                            <button class="btn btn-large btn-block btn-primary" type="button">More Info <span
+                            <button class="btn btn-large btn-block btn-primary" type="button">More News <span
                                     class="glyphicon glyphicon-play"></span></button>
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <hr style="background-color: rgb(0,0,0, 0.7); height: 3px; margin: 0 !important">
+                    </div>
+                </div>
             </div>
-        </section>
+
+            <section class="py-5 contact-home">
+                <div class="container-fluid reveal">
+                    <div class="row">
+                        <img src="img/doodle-kosmik-2.png" alt="" srcset=""
+                            class="doodle doodle-contact reveal fade-right">
+                        <img src="img/banner-kontak.jpg" class="img-fluid img-contact" alt="...">
+                        <div class="col-lg-3">
+                            <div class="title-contact">
+                                <h3>Contact</h3>
+                            </div>
+                        </div>
+                        <div class="col-lg-9 col-xs-12">
+                            <div class="information-contact">
+                                <h3>Kosmik Network</h3>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos amet repudiandae
+                                    voluptate
+                                    alias laudantium beatae porro minus magnam perspiciatis cum.</p>
+                                <br>
+                                <p>email bussiness kosmik@gmail.com</p>
+                                <p>+62 8888 xxxx xxxx</p>
+                            </div>
+                            <div class="span9 btn-block">
+                                <button class="btn btn-large btn-block btn-primary" type="button">More Info <span
+                                        class="glyphicon glyphicon-play"></span></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <footer id="footer" class="footer-texts-more-lighten">
             <div class="container-fluid">
@@ -586,6 +579,7 @@
             </div>
         </footer>
     </div>
+
 
     <!-- Vendor -->
     <script src="vendor/jquery/jquery.min.js"></script>
